<resources>
    <string name="app_name">Tracking</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_home">Home</string>
    <string name="menu_category">News</string>
    <string name="menu_nearest_medical">Nearest Medical</string>
    <string name="menu_feedback">Feedback</string>
    <string name="fragment_home">Home</string>
    <string name="fragment_news">News</string>
    <string name="feedback_to_app">App feedback</string>
    <string name="feedback_description">Please enter your feedback below to help make our app even better !</string>
    <string name="feedback_hint">Your feedback ...</string>
    <string name="send_feedback">Send feedback</string>
    <string name="title" translatable="false">OCEANTECH TRACKING</string>
    <string name="loggin">SIGN IN</string>
    <string name="label_sign_in">Don\'t have an account<font color="#3F51B5"><b> Sign up</b></font></string>
    <string name="forget_password">Forget password</string>
    <string name="channel_description">Notification</string>
    <string name="category_theme">News topic</string>
    <string name="home_everyone">Let\'s all work together to prevent dengue fever !</string>
    <string name="home_button">Dengue News</string>
    <string name="info_app">Thông tin ứng dụng</string>
    <string name="privacy">Dengue alert is a proactive alert application supporting people detect and avoid exposure to risk factors for dengue infection. At the same time, the application aslo provides necessary information on the causative agnet, measures and the nearest medical facilities to the people.</string>
    <string name="note">Dengue Alert does not store or collect user location data.</string>
    <string name="accept_use">Agree to use</string>
    <string name="category">Category</string>
    <string name="users">Users</string>
    <string name="timekeeping">Timekeeping</string>
    <string name="edit_prj">Edit project</string>
    <string name="new_prj">New project</string>
    <string name="prj_code">Project code</string>
    <string name="prj_name">Project name</string>
    <string name="status">Status</string>
    <string name="desc">Desc</string>
    <string name="description">Description</string>
    <string name="edit_account">Edit team</string>
    <string name="gender">Gender</string>
    <string name="role">Role</string>
    <string name="reset_password">Reset password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="edit_team">Edit team</string>
    <string name="edit_member">Edit member</string>
    <string name="all_members">All members</string>
    <string name="all_teams">All teams</string>
    <string name="position">Position</string>
    <string name="page_1">Page 1</string>

    <string name="name">Name</string>
    <string name="code">Code</string>
    <string name="skill_level">Skill level</string>
    <string name="title_category">Bệnh sốt xuất huyết</string>
    <string name="retry">Retry</string>
    <string name="no_location_text">No location</string>
    <string name="ok">Ok</string>
    <string name="none">None</string>
    <string name="permission_rationale">permission rationale</string>
    <string name="permission_denied_explanation">permission denied explanation</string>
    <string name="settings">Settings</string>
    <string name="warning_dengue">Ứng dụng đang quét các ổ dịch xung quanh bạn !</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="signin">New account</string>
    <string name="last_name">Fisrt Name</string>
    <string name="first_name">Last Name</string>
    <string name="display_name">Display name</string>
    <string name="username">Username</string>
    <string name="signin_account">Sign in</string>
    <string name="login_fail">User name or password is incorect</string>
    <string name="login_success">Login successfully.</string>
    <string name="field_not_empty">This field not empty.</string>
    <string name="has_dengue">⛔ Bạn đang ở trong phạm vi có nguy cơ nhiễm Sốt xuất huyết !</string>
    <string name="content_new">News content</string>
    <string name="by_outhor">by author</string>
    <string name="view_count">" %1$s View"</string>
    <string name="en">English</string>
    <string name="vi">Vietnamese</string>
    <string name="Cancel">Cancel</string>
    <string name="open_location_settings">Open setting</string>
    <string name="gps_network_not_enabled">Application must be use your location tp play the current and warning the center of the services.</string>
    <string name="close">Close</string>
    <string name="need_network">The Dengue Alert app needs to use mobile data to detect outbreaks around. You need to anable mobile data or Wifi in the settings.</string>
    <string name="account">User name</string>
    <string name="received">We have received your feedback</string>
    <string name="exit">Exit app</string>
    <string name="no_dengue">🛡 Bạn đã ở ngoài phạm vi có nguy cơ nhiễm Sốt xuất huyết</string>
    <string name="at">at</string>
    <string name="dot" translatable="false">•</string>
    <string name="point_up" translatable="false">▲</string>
    <string name="point_down" translatable="false">▼</string>
    <string name="point_left" translatable="false">\u25C4</string>
    <string name="point_right" translatable="false">\u25BA</string>
    <string name="feedback_empty">Vui lòng nhập phản hồi của bạn.</string>
    <string name="confirm_action">Confirm action</string>
    <string name="confirm_question">Are you sure you want to perform this action ?</string>
    <string name="confirm">Confirm</string>
    <string name="log_out">Log out</string>
    <string name="total_hours">Total hours</string>
    <string name="type">Type</string>
    <string name="day_off">Day off</string>
    <string name="office_hour">Office hours</string>
    <string name="overtime">Overtime hours</string>
    <string name="office_task">Office hour task</string>
    <string name="overtime_task">Overtime task</string>
    <string name="office_task_star">Office hour task (*)</string>
    <string name="overtime_task_star">Overtime task (*)</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="task_description">Task\'s description</string>
    <string name="new_task">New Task</string>
    <string name="add">Add</string>
    <string name="page">Page</string>
    <string name="days">Days</string>
    <string name="task">task</string>
    <string name="tasks">tasks</string>
    <string name="OH">OH</string>
    <string name="OT">OT</string>
    <string name="invalid_input">Invalid hour input</string>
    <string name="total_hour_exceed">Invalid hour input</string>
    <string name="invalid_total_hour">"Total office hour is at most 8 hours</string>
    <string name="edit_error">Cannot edit days in the future</string>
    <string name="rows">Rows</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="team">Team</string>
    <string name="teams">Teams</string>
    <string name="member">Member</string>
    <string name="members">Members</string>
    <string name="join">Join</string>
    <string name="manager">Manager</string>
    <string name="staff">Staff</string>
    <string name="accountant">Accountant</string>
    <string name="admin">Admin</string>
    <string name="off">Off</string>
    <string name="no_event">No event</string>
    <string name="add_new">Add new</string>
    <string name="invalid_time">Invalid value</string>
    <string name="new_user">New user</string>
    <string name="select_role">Select roles</string>

    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="jan">JAN</string>
    <string name="feb">FEB</string>
    <string name="mar">MAR</string>
    <string name="apr">APR</string>
    <string name="may">MAY</string>
    <string name="jun">JUN</string>
    <string name="jul">JULY</string>
    <string name="aug">AUG</string>
    <string name="sep">SEP</string>
    <string name="oct">OCT</string>
    <string name="nov">NOV</string>
    <string name="dec">DEC</string>
    <string name="project">Project</string>
    <string name="personnel">Personnel</string>
    <string name="hours">hours</string>
    <string name="no_" translatable="false">No.</string>
    <string name="invalid_email">Invalid email</string>
</resources>