<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_admin"
            android:icon="@drawable/list"
            android:title="@string/app_name" />
        <item
            android:id="@+id/nav_timekeeping"
            android:icon="@drawable/barchart"
            android:title="@string/timekeeping" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/categories"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/group"
            android:title="@string/users" />
    </group>
    <group android:id="@+id/lang">
        <item
            android:id="@+id/nav_change_language"
            android:icon="@drawable/ic_language"
            android:title=""
            app:actionProviderClass="android.widget.ShareActionProvider"
            app:actionViewClass="androidx.appcompat.widget.AppCompatImageView"/>
        <item
            android:id="@+id/exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/exit" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/log_out"
            android:title="@string/log_out"/>
    </group>
</menu>