<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_account"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_edit_text"
        android:layout_marginHorizontal="10dp"
        android:padding="5dp"
        android:textSize="16sp"
        android:enabled="false"
        android:layout_marginBottom="10dp"/>


    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_edit_text"
        android:layout_marginHorizontal="10dp"
        android:padding="5dp"
        android:textSize="16dp"
        android:hint="nd122@gmail.com"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="10dp"/>

    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/tvRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_margin="10dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp">

        <CheckBox
            android:id="@+id/cbManager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/cbAccountant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountant"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbManager" />

        <CheckBox
            android:id="@+id/cbStaff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/staff"
            app:layout_constraintStart_toEndOf="@+id/cbManager"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="60dp"/>

        <CheckBox
            android:id="@+id/cbAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cbManager"
            app:layout_constraintTop_toBottomOf="@+id/cbStaff"
            android:layout_marginStart="60dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/right_arrow"
            android:padding="8dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/tvResetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llResetPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNewPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/etNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edit_text"
            android:layout_marginHorizontal="10dp"
            android:padding="5dp"
            android:textSize="16sp"
            android:enabled="false"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/tvConfirmPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/etConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edit_text"
            android:layout_marginHorizontal="10dp"
            android:padding="5dp"
            android:textSize="16sp"
            android:enabled="false"
            android:layout_marginBottom="10dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"/>

        <Button
            android:id="@+id/confirmAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:enabled="false"
            android:layout_marginHorizontal="10dp"/>

    </LinearLayout>

</LinearLayout>